--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-mongo_db_url="mongodb://localhost:27017"
+mongo_db_url="mongodb+srv://ashirxhk1:XIhy19z823IU0zZe@cluster0.d85qmua.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 
 
