-add realtime notification

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 mongo_db_url="mongodb+srv://ashirxhk1:XIhy19z823IU0zZe@cluster0.d85qmua.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-# mongo_db_url="mongodb://localhost:27017/bicc"
+# mongo_db_url="mongodb://127.0.0.1:27017/bicc"
 JWT_TOKEN="bic"
 
 # "mongodb+srv://ashirxhk1:XIhy19z823IU0zZe@cluster0.d85qmua.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
